force-app/main/default/objects/Veiculos_e_placas__c/Veiculos_e_placas__c.object-meta.xml
<CustomObject>
    <label>Veículos e placas</label>
    <nameField>
        <displayFormat>VP-{0000000000}</displayFormat>
        <label>Nome de Veículos e placas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veículos e placas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>