force-app/main/default/objects/Veiculos_e_placas__c/fields/Classe_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Classe_do_produto__c</fullName>
    <label>Classe do produto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>