force-app/main/default/objects/Veiculos_e_placas__c/fields/Data_de_instalacao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_instalacao__c</fullName>
    <label>Data de instalação</label>
    <type>Date</type>
</CustomField>