force-app/main/default/objects/Veiculos_e_placas__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>ID Externo para integração com o ERP</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>