force-app/main/default/objects/Veiculos_e_placas__c/fields/Tipo_de_veiculo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_veiculo__c</fullName>
    <label>Tipo de veículo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>